{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "1a89f354-4a36-44bd-b017-28a7473112a9",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "0015eafc-7481-468a-b9b8-655f85d21df7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "6364fb77-6d18-4a37-a714-14db8a6fe77e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwapToScout",
                    "type": "Button",
                    "id": "74104f9d-8b17-4c28-a4c7-7f7ed9f5518a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootPress",
                    "type": "Button",
                    "id": "0e7adb01-de6c-4336-8ab6-c0df4da5fc45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.2,behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootHold",
                    "type": "Button",
                    "id": "3d75d50c-38e9-4bbd-8c9f-aa0ab4d64d26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.3,pressPoint=0.4)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "2fe875d9-737c-4e04-a64e-2b94e592556f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "92660051-1c8f-4f85-961f-fa012d5d204c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c357d116-a31d-4165-93d7-be5f80d6be4b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9f8d3f3e-b6e8-4d19-9ea6-131de8a72e22",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b25a2c7e-426e-4935-b26d-edd4a8d429e4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ead682c7-6fb1-42cd-8b63-e1d7cf7a9d1b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb1c7117-db8a-40b5-9077-f3f44df12104",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapToScout",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e2558e8-5cc0-4006-9ff9-4075b8a2c1a3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3cff05f-71b1-47dc-93d3-e984338e002e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}